# rpi4-baremetal-experiments

./: Cargo.toml  README.md
bcm-hal/: Cargo.toml
bcm-hal/src/: common.rs  gpio.rs  lib.rs
cortex-a-quickstart/: Cargo.toml  app.img
cortex-a-quickstart/.cargo/: config
cortex-a-quickstart/src/: boot.rs  main.rs
cortex-a-rt/: Cargo.toml  build.rs  link.x.in
cortex-a-rt/src/: boot.rs  boot.s  exception.rs  lib.rs  memory.rs
cortex-a-rt/src/exception/: exception.rs  handlers.rs  masking.rs  mod.rs
cortex-a-rt/src/mmu/: default_layout.rs  mmu.rs  mod.rs  translation_table.rs
cortex-a-rt/src/mmu/layout/: default.rs  mod.rs  simple.rs
primecell-hal/: Cargo.toml
primecell-hal/src/: uart.rs
rpi-bootloader/: Cargo.toml  app.img  build.rs  link_custom.x.in
rpi-bootloader/.cargo/: config
rpi-bootloader/src/: boot.rs  main.rs  null_lock.rs
rpi-hal/: Cargo.toml
rpi-hal/src/: gpio.rs  lib.rs  panic_uart.rs  serial.rs
rpi-hal/src/gicv2/: gicc.rs  gicd.rs  mod.rs
rpi-pac/: Cargo.toml
rpi-pac/src/: gpio.rs  lib.rs  rpi.rs  uart.rs
rpi-pac/src/gicv2/: gicc.rs  gicd.rs  mod.rs
