[package]
name = "cortex-a-quickstart"
version = "0.1.0"
authors = ["Intel <chemicstry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-a-rt = { path = "../cortex-a-rt" }
cortex-a = "5.1"
rpi-hal = { path = "../rpi-hal", features = ["rpi4"] }
embedded-hal = "0.2"
panic-halt = "0.2"
lock_api = "0.4"
