[package]
name = "cortex-a-rt"
version = "0.1.0"
authors = ["Intel <chemicstry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-a = "5.1"
register = "1.0"

[features]
default = ["entry"]
# Generate entry code which calls into main()
entry = []
