[package]
name = "rpi-hal"
version = "0.1.0"
authors = ["Intel <chemicstry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2", features = ["unproven"] }
register = "1.0"
rpi-pac = { path = "../rpi-pac" }
lock_api = "0.4"
cortex-a = "5.1"
nb = "1.0"

[features]
rpi4 = ["rpi-pac/rpi4"]
