[package]
name = "rpi-pac"
version = "0.1.0"
authors = ["chemicstry <chemicstry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
register = { version = "1.0", features = ["no_std_unit_tests"] }

[features]
rpi4 = []
